# dual_arms

./: CMakeLists.txt  README.md  package.xml  package.xml.bak
config/: benchmark.yaml  dual_arms.srdf  dual_arms.urdf  dual_arms_controller.yaml  dual_arms_controller.yaml.bak  dual_arms_hardware.urdf.xacro  gz_bridge.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  moveit_controllers.yaml.bak  nour.urdf.xacro  ompl_planning.yaml  ros2_controllers.yaml  trajopt_planning.yaml
launch/: benchmark.launch.py  dual_arms_controller.launch.py  dual_arms_gazebo.launch.py.bak  dual_robot_moveit.launch.py  dual_robot_moveit.launch.py.bak  moveit_dualarms.launch.py  moveit_dualarms.launch.py.bak
meshes/: base_link.STL
src/: dual_arms_controller.cpp
srdf/: abb.srdf  ar4.srdf  ar4IK.srdf  dual_arms.srdf  dual_arms.srdf.bak  dual_arms.srdf.xacro  modefied_dual_arms.srdf.xacro
urdf/: abb.urdf  ar4.urdf  ar4IK.urdf  dual_arms.gazebo.xacro  dual_arms.urdf  dual_arms.urdf.xacro  dual_arms_with_environment.xacro  irb120_wrapper.xacro  stand.urdf.xacro
